<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.samir.andrew.akellabreskella.daysList"
    tools:showIn="@layout/activity_days_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgDay1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/day_1" />

        <TextView
            android:id="@+id/tvDay1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/be_happy_with_god"
            android:textColor="#000"
            android:textSize="@dimen/text_day_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="70dp"
        android:layout_weight="1.1"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imgDay2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/day_2" />

        <TextView
            android:id="@+id/tvDay2"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/be_happy_with_patrner"
            android:textColor="#000"

            android:textSize="@dimen/text_day_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView
            android:id="@+id/imgDay3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/day_3" />

        <TextView
            android:id="@+id/tvDay3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/be_happy_with_children"
            android:textColor="#000"

            android:textSize="@dimen/text_day_size" />
    </LinearLayout>

</LinearLayout>
